--- a/index.html
+++ b/index.html
@@ -13,62 +13,67 @@
 <body>
     <main class="content">
         <div class="params">
-            <div class="page-2">
-                <form class="js-del-osd">
-                    <h4 class="mb-4">Удаление OSD</h4>
+            <div class="pages">
+                <div class="page-2">
+                    <form class="js-del-osd">
+                        <h4 class="mb-4">Удаление OSD</h4>
+                        <div class="form-group">
+                            <label for="del_poolind">Индекс пула</label>
+                            <input type="number" name="poolind" id="del_poolind" class="form-control"
+                                aria-describedby="emailHelp" placeholder="Введите индекс пула">
+                        </div>
+                        <div class="form-group">
+                            <label for="osdind">Индекс OSD</label>
+                            <input type="number" name="osdind" class="form-control" id="osdind"
+                                placeholder="Введите индекс OSD">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Удалить OSD</button>
+                    </form>
+                    <hr>
+                    <form class="js-add-object">
+                        <h4 class="mb-4">Добавление объекта</h4>
+                        <div class="form-group">
+                            <label for="poolind">Индекс пула</label>
+                            <input type="number" name="poolind" id="poolind" class="form-control"
+                                aria-describedby="emailHelp" placeholder="Введите индекс пула">
+                        </div>
+                        <div class="form-group">
+                            <label for="objectid">ID объекта</label>
+                            <input type="number" name="objectid" class="form-control" id="objectid"
+                                placeholder="Введите ID объекта">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Добавить объект</button>
+                    </form>
+                </div>
+
+                <form class="js-start-form">
+                    <h4 class="mb-4">Создание кластера</h4>
                     <div class="form-group">
-                        <label for="del_poolind">Индекс пула</label>
-                        <input type="number" name="poolind" id="del_poolind" class="form-control"
-                            aria-describedby="emailHelp" placeholder="Введите индекс пула">
+                        <label for="pools">Количество пулов(не более 5)</label>
+                        <input type="number" name="pools" id="pools" class="form-control" aria-describedby="emailHelp"
+                            placeholder="Введите количество пулов">
                     </div>
                     <div class="form-group">
-                        <label for="osdind">Индекс OSD</label>
-                        <input type="number" name="osdind" class="form-control" id="osdind"
-                            placeholder="Введите индекс OSD">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Удалить OSD</button>
-                </form>
-                <hr>
-                <form class="js-add-object">
-                    <h4 class="mb-4">Добавление объекта</h4>
-                    <div class="form-group">
-                        <label for="poolind">Индекс пула</label>
-                        <input type="number" name="poolind" id="poolind" class="form-control"
-                            aria-describedby="emailHelp" placeholder="Введите индекс пула">
+                        <label for="cnt_osd">Количество OSD (не более 10) в каждом пуле(через запятую)</label>
+                        <input type="text" name="osds" class="form-control" id="cnt_osd"
+                            placeholder="Введите количество OSD">
                     </div>
                     <div class="form-group">
-                        <label for="objectid">ID объекта</label>
-                        <input type="number" name="objectid" class="form-control" id="objectid"
-                            placeholder="Введите ID объекта">
+                        <label for="rfs">Факторы репликации (не более 5) в каждом пуле(через запятую)</label>
+                        <input type="text" name="rfs" class="form-control" id="rfs"
+                            placeholder="Введите факторы репликации">
                     </div>
-                    <button type="submit" class="btn btn-primary">Добавить объект</button>
+                    <button type="submit" class="btn btn-primary">Старт</button>
                 </form>
             </div>
-            <form class="js-start-form">
-                <h4 class="mb-4">Создание кластера</h4>
-                <div class="form-group">
-                    <label for="pools">Количество пулов(не более 5)</label>
-                    <input type="number" name="pools" id="pools" class="form-control" aria-describedby="emailHelp"
-                        placeholder="Введите количество пулов">
-                </div>
-                <div class="form-group">
-                    <label for="cnt_osd">Количество OSD (не более 10) в каждом пуле(через запятую)</label>
-                    <input type="text" name="osds" class="form-control" id="cnt_osd"
-                        placeholder="Введите количество OSD">
-                </div>
-                <div class="form-group">
-                    <label for="rfs">Факторы репликации (не более 5) в каждом пуле(через запятую)</label>
-                    <input type="text" name="rfs" class="form-control" id="rfs"
-                        placeholder="Введите факторы репликации">
-                </div>
-                <button type="submit" class="btn btn-primary">Старт</button>
-            </form>
+            <div class="warning invisible">
+                <h3 class="red">Кластер недоступен</h3>
+            </div>
         </div>
         <canvas id="canvas"></canvas>
     </main>
     <script src="bootstrap/bootstrap.bundle.min.js"></script>
     <script src="fabric/fabric.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
 
     <script src="scripts/utils.js"></script>
     <script type="module" src="scripts/main.js"></script>
