--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="content">
         <div class="params">
             <div class="pages">
-                <div class="page-2">
+                <div class="page-2 invisible">
                     <form class="js-del-osd">
                         <h4 class="mb-4">Удаление OSD</h4>
                         <div class="form-group">
@@ -65,9 +65,6 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Старт</button>
                 </form>
-            </div>
-            <div class="warning invisible">
-                <h3 class="red">Кластер недоступен</h3>
             </div>
         </div>
         <canvas id="canvas"></canvas>
